--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
   
 <style>
 body { 
-  background-color: red;
+  background-color:black;
      }
 
 h1 {
-  color: white; 
+  color: lime; 
   text-align: center;
   font-size: 50px;
    }  
