--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 <html lang="en">
 <body>
   <h1> Sarah Sumner's Website </h1>
+  
+  <img src="mypersonalartifact.jpg" alt="artifact">
+  
+  
 </body>
   
 <style>
