--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <body>
   <h1> Sarah Sumner's Website </h1>
   
-  <img src="mypersonalartifact.jpg" alt="artifact">
+  <center> <img src="mypersonalartifact.jpg" alt="artifact"> </center>
+  
   
   
 </body>
