--- a/index.html
+++ b/index.html
@@ -1,6 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <body>
+  
+   <ul>
+    <li class="navbar"> <a href="#home"> Home </a></li>
+  <li class="navbar"> <a href="#list"> List Items</li>
+    <li class="navbar"><a href="#picture"> Pictures </li>
+  </ul>
+  
   <h1> Sarah Sumner's Website </h1>
   
   <center> <img src="mypersonalartifact.jpg" alt="artifact"> </center>
@@ -19,6 +26,39 @@ h1 {
   text-align: center;
   font-size: 50px;
    }  
+  }
+ol {
+  list-style-type: upper-roman;
+}
+
+a {
+  text-decoration: none;
+  color: black;
+  }
+
+ul {
+  list-style-type: none;
+  color: gold;
+  position: fixed;
+  background-color: lime;
+  width: 100%;
+  top: 0;
+  left: 0;
+}
+
+li.navbar {
+  display: inline;
+  padding: 10px;
+  width: 200px;
+margin: 5px;
+  top: 0;
+  left: 0;
+  font-size: 200%;
+}
+
+li.navbar a:hover {
+  background-color: white;
+}
   </style> 
   
 </html>
