--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   
    <ul>
     <li class="navbar"> <a href="#home"> Home </a></li>
-  <li class="navbar"> <a href="#list"> List Items</li>
+  <li class="navbar"> <a href="apps.html"> Apps </li>
     <li class="navbar"><a href="#picture"> Pictures </li>
   </ul>
   
