link to external css

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <body>
-  
+  <link rel="stylesheet" href="style.css">
    <ul>
     <li class="navbar"> <a href="#home"> Home </a></li>
   <li class="navbar"> <a href="apps.html"> Apps </li>
@@ -14,52 +14,7 @@
   
   <iframe src="https://scratch.mit.edu/projects/425891772/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
   
-</body>
+</body>link
   
-<style>
-body { 
-  background-color: black;
-     }
-
-h1 {
-  color: lime; 
-  text-align: center;
-  font-size: 50px;
-  line-height: 150px;
-   }  
-  }
-ol {
-  list-style-type: upper-roman;
-}
-
-a {
-  text-decoration: none;
-  color: black;
-  }
-
-ul {
-  list-style-type: none;
-  color: gold;
-  position: fixed;
-  background-color: lime;
-  width: 100%;
-  top: 0;
-  left: 0;
-}
-
-li.navbar {
-  display: inline;
-  padding: 10px;
-  width: 200px;
-margin: 5px;
-  top: 0;
-  left: 0;
-  font-size: 200%;
-}
-
-li.navbar a:hover {
-  background-color: white;
-}
-  </style> 
   
 </html>
