--- a/apps.html
+++ b/apps.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
   
+  <head>
+    <link rel="stylesheet" href="style.css">
+  </head>
+  
 <body>
 
 <iframe width="352" height="620" style="border: 0px;" src="https://studio.code.org/projects/applab/Ogd4HEp3akxVZu1ef2KRFtYzCFeK0MxsKhyGhKT-8zg/embed"></iframe>
